--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -286,3 +286,9 @@ footer {
     width: 50%; /* 6 columns */
   }
 }
+
+/* BOX */
+.box{
+  background-color: rgba(0,0,0,0.05);
+  padding: 15px;
+}
