--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,5 @@
 //= require pages
+//= require customer
 //= require register
 //= require sessions
 //= require style
@@ -226,11 +227,9 @@ textarea{
 	border: none;
 }
 
-/* PROFILE: OFF CANVAS */
-/*
- * Style tweaks
- * --------------------------------------------------
- */
+/* PROFILE: OFF CANVAS 
+------------------------*/
+
 html,
 body {
   overflow-x: hidden; /* Prevent scroll on narrow devices */
@@ -292,3 +291,4 @@ footer {
   background-color: rgba(0,0,0,0.05);
   padding: 15px;
 }
+
