--- a/app/assets/stylesheets/customer.css.scss
+++ b/app/assets/stylesheets/customer.css.scss
@@ -1,3 +1,52 @@
 // Place all the styles related to the Customer controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/* style-settings-header
+--------------------------*/
+.style-settings-header{
+  background-color: rgba(0,0,0,0.1);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  cursor: pointer;
+  margin-bottom: 0px;
+  
+}
+.style-settings-header:hover{
+	background-color: rgba(0,0,0,0.2);
+}
+
+.style-settings-options{
+	border-left: 1px solid red;
+	border-right: 1px solid red;
+	border-bottom: 1px solid red;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-color: rgba(0,0,0,0.1);
+	padding: 10px;
+	margin-bottom: 2px;
+}
+
+/* MAKE NON-SQUARE IMAGE CIRCLE */
+div.img-div{
+	height:140px;
+  width:140px;
+  overflow:hidden;
+  border-radius: 50%;
+}
+.img-div img{
+    -webkit-transform:translate(-50%);
+    -moz-transform:translate(-50%);
+    -o-transform:translate(-50%);
+    margin-left: 100px;
+}
+.square-div{
+	width: 140px;
+	height: 140px;
+	border: 1px solid #000;	
+	margin: 5px auto;
+	border-radius: 50%;
+	background-size: cover;
+	background-position: center center;
+}
