--- a/app/assets/stylesheets/customer.css.scss
+++ b/app/assets/stylesheets/customer.css.scss
@@ -11,7 +11,6 @@
   padding-left: 10px;
   cursor: pointer;
   margin-bottom: 0px;
-  
 }
 .style-settings-header:hover{
 	background-color: rgba(0,0,0,0.2);
@@ -44,9 +43,12 @@ div.img-div{
 .square-div{
 	width: 140px;
 	height: 140px;
-	border: 1px solid #000;	
+	border: 5px solid rgba(0,0,0,0.1);
 	margin: 5px auto;
 	border-radius: 50%;
 	background-size: cover;
 	background-position: center center;
+}
+.square-div:hover{
+	box-shadow: 0px 0px 3pt 2pt rgba(0,0,0,0.5);
 }
