--- a/app/assets/stylesheets/register.css.scss
+++ b/app/assets/stylesheets/register.css.scss
@@ -2,10 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#content{
-	padding: 20px 20px 0px 20px;
-	border-right: 1px solid #ddd;
-	border-left: 1px solid #ddd;
-	border-bottom: 1px solid #ddd;
-	margin-bottom: 40px;
+#stage2{
+  display: none;	
+}
+
+#registration-container{
+  background-color: rgba(0,0,0,0.1);
+  width: 100;
+  padding: 20px;
+  margin: 10px;
+}
+label{
+  padding: 10px;
+  border: 5px solid rgba(0,0,0,0.1);
+
 }
