--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,8 +40,8 @@ body
 	          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
 }
 
-input[type=checkbox]{
-	display: block;
+input[type=checkbox], input[type=radio]{
+	display: none;
 }
 
 .form-group
