--- a/app/assets/stylesheets/register.css.scss
+++ b/app/assets/stylesheets/register.css.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#stage2{
+#stage2, #stage3, #stage4, #stage5{
   display: none;	
 }
 
@@ -13,7 +13,11 @@
   margin: 10px;
 }
 label{
-  padding: 10px;
+  padding: 5px;
   border: 5px solid rgba(0,0,0,0.1);
 
+}
+
+.header-choose-size{
+	text-align: center;
 }
