Leave 'Next' button disabled if nothing chosen (buggy)

--- a/app/views/customer/profile.html.erb
+++ b/app/views/customer/profile.html.erb
@@ -157,7 +157,7 @@
 											<hr>
 											<div class="form-group">
 												<div class="col-sm-offset-2 col-sm-10">
-													<button id="submit-btn" type="submit" class="btn btn-warning pull-right" onclick="enableFields()">Modify shipping information</button>
+													<input id="submit-btn" type="button" class="btn btn-warning pull-right" onclick="enableFields()" value="Modify shipping information">
 												</div>
 											</div>
 										</form>
