--- a/app/views/register/_form.html.erb
+++ b/app/views/register/_form.html.erb
@@ -49,24 +49,24 @@
     <div id="stage2">
       <div class="row">
         <div class="col-sm-4 col-xs-12">
-          <label class="cb" for="jacket1" onclick="stage2NextEnable()">
+          <label class="cb" for="jacket1" >
             <img src="assets/bp2.gif" class="img-responsive">
           </label>
-          <input type="checkbox" id="jacket1">
+          <input type="checkbox" id="jacket1" onchange="stage2NextEnable()">
         </div>
 
         <div class="col-sm-4 col-xs-12">
-          <label class="cb" for="jacket2" onclick="stage2NextEnable()">
+          <label class="cb" for="jacket2" >
             <img src="assets/bp2.gif" class="img-responsive">
           </label>
-            <input type="checkbox" id="jacket2">
+            <input type="checkbox" id="jacket2" onchange="stage2NextEnable()">
         </div>
 
         <div class="col-sm-4 col-xs-12">
-          <label class="cb" for="jacket3" onclick="stage2NextEnable()">
+          <label class="cb" for="jacket3" >
             <img src="assets/bp2.gif" class="img-responsive">
           </label>
-            <input type="checkbox" id="jacket3">
+            <input type="checkbox" id="jacket3" onchange="stage2NextEnable()">
         </div>
       </div>
       <hr> 
@@ -77,24 +77,24 @@
     <div id="stage3">
       <div class="row">
         <div class="col-sm-4 col-xs-12">
-          <label class="cb" for="pants1" onclick="stage3NextEnable()">
+          <label class="cb" for="pants1">
             <img src="assets/bp2.gif" class="img-responsive">
           </label>
-          <input type="checkbox" id="pants1">
+          <input type="checkbox" id="pants1" onchange="stage3NextEnable()">
         </div>
 
         <div class="col-sm-4 col-xs-12">
-          <label class="cb" for="pants2" onclick="stage3NextEnable()">
+          <label class="cb" for="pants2">
             <img src="assets/bp2.gif" class="img-responsive">
           </label>
-            <input type="checkbox" id="pants2">
+            <input type="checkbox" id="pants2" onchange="stage3NextEnable()">
         </div>
 
         <div class="col-sm-4 col-xs-12">
-          <label class="cb" for="pants3" onclick="stage3NextEnable()">
+          <label class="cb" for="pants3">
             <img src="assets/bp2.gif" class="img-responsive">
           </label>
-            <input type="checkbox" id="pants3">
+            <input type="checkbox" id="pants3" onchange="stage3NextEnable()">
         </div>
       </div>
       <hr> 
