Modified the schema for Preferences etc

--- a/app/views/register/_form.html.erb
+++ b/app/views/register/_form.html.erb
@@ -20,6 +20,7 @@
       <div class="row">
         <div class="col-sm-4 col-xs-12">
           <h3 class="header-choose-size">Suits</h3>
+
           <label class="rb" for="pathstyle1" onclick="stage1NextEnable()">
             <img src="assets/bp2.gif" class="img-responsive">
           </label>
@@ -219,7 +220,7 @@
       </div>
       <hr>
       <input type="button" value="Previous" class="btn btn-default pull-left" onclick="backToStage4()">
-      <input id="stage5Next" type="button" value="Done" class="btn btn-default pull-right" onclick="processStage5()" disabled>
+      <input id="stage5Next" type="submit" value="Done" class="btn btn-default pull-right" onclick="processStage5()" disabled>
     </div><!-- end of stage 5 -->
     
   </div><!-- end of #registration-container -->  
